--- a/7rMartSuperMarket/test-output/old/Suite/methods-alphabetical.html
+++ b/7rMartSuperMarket/test-output/old/Suite/methods-alphabetical.html
@@ -1,28 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9e94ad">  <td>24/11/01 21:43:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testscript.LoginTest@491b9b8]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@610454273</td>   <td></td> </tr>
-<tr bgcolor="9e94ad">  <td>24/11/01 21:43:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testscript.LoginTest@491b9b8]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@610454273</td>   <td></td> </tr>
-<tr bgcolor="9e94ad">  <td>24/11/01 21:43:54</td>   <td>10434</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testscript.LoginTest@4f49f6af]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@610454273</td>   <td></td> </tr>
-<tr bgcolor="9e94ad">  <td>24/11/01 21:43:54</td>   <td>10434</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testscript.LoginTest@4f49f6af]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@610454273</td>   <td></td> </tr>
-<tr bgcolor="9e94ad">  <td>24/11/01 21:43:41</td>   <td>-2033</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testscript.LoginTest@491b9b8]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@610454273</td>   <td></td> </tr>
-<tr bgcolor="9e94ad">  <td>24/11/01 21:43:41</td>   <td>-2033</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testscript.LoginTest@491b9b8]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@610454273</td>   <td></td> </tr>
-<tr bgcolor="9e94ad">  <td>24/11/01 21:43:51</td>   <td>8222</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testscript.LoginTest@4f49f6af]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@610454273</td>   <td></td> </tr>
-<tr bgcolor="9e94ad">  <td>24/11/01 21:43:51</td>   <td>8222</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testscript.LoginTest@4f49f6af]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@610454273</td>   <td></td> </tr>
-<tr bgcolor="82a7b9">  <td>24/11/01 21:43:43</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyUserIsAbletoLoginValidCredentials(java.lang.String,java.lang.String)[pri:0, instance:testscript.LoginTest@491b9b8]">verifyUserIsAbletoLoginValidCredentials</td> 
-  <td>main@610454273</td>   <td></td> </tr>
-<tr bgcolor="82a7b9">  <td>24/11/01 21:43:43</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyUserIsAbletoLoginValidCredentials(java.lang.String,java.lang.String)[pri:0, instance:testscript.LoginTest@491b9b8]">verifyUserIsAbletoLoginValidCredentials</td> 
-  <td>main@610454273</td>   <td></td> </tr>
-<tr bgcolor="82a7b9">  <td>24/11/01 21:43:54</td>   <td>10419</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyUserIsAbletoLoginValidCredentials(java.lang.String,java.lang.String)[pri:0, instance:testscript.LoginTest@4f49f6af]">verifyUserIsAbletoLoginValidCredentials</td> 
-  <td>main@610454273</td>   <td></td> </tr>
-<tr bgcolor="82a7b9">  <td>24/11/01 21:43:54</td>   <td>10419</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyUserIsAbletoLoginValidCredentials(java.lang.String,java.lang.String)[pri:0, instance:testscript.LoginTest@4f49f6af]">verifyUserIsAbletoLoginValidCredentials</td> 
-  <td>main@610454273</td>   <td></td> </tr>
+<tr bgcolor="b28192">  <td>24/11/13 21:36:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testscript.LoginTest@35d019a3]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@961409111</td>   <td></td> </tr>
+<tr bgcolor="b28192">  <td>24/11/13 21:36:27</td>   <td>-3992</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testscript.LoginTest@35d019a3]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@961409111</td>   <td></td> </tr>
+<tr bgcolor="d076c9">  <td>24/11/13 21:36:29</td>   <td>-1431</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.invalidUsernameInvalidPassword()[pri:0, instance:testscript.LoginTest@35d019a3]">invalidUsernameInvalidPassword</td> 
+  <td>main@961409111</td>   <td></td> </tr>
 </table>
