--- a/7rMartSuperMarket/test-output/old/parallel testing/classes.html
+++ b/7rMartSuperMarket/test-output/old/parallel testing/classes.html
@@ -50,7 +50,8 @@
 <tr>
 <td>&nbsp;</td>
 <td>invalidUsernameValidPassword</td>
-<td>&nbsp;</td></tr>
+<td>smoke </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>verifyUserIsAbletoLoginValidCredentials</td>
