--- a/7rMartSuperMarket/test-output/old/Suite/classes.html
+++ b/7rMartSuperMarket/test-output/old/Suite/classes.html
@@ -4,27 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testscript.LoginTest</td>
+<td>testscript.AdminUserTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>invalidUsernameInvalidPassword</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>validusernameinvalidpassword</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>invalidUsernameValidPassword</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyUserIsAbletoLoginValidCredentials</td>
+<td>verifyUserisAbletocreateNewAdminUser</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
