--- a/7rMartSuperMarket/test-output/old/Suite/methods.html
+++ b/7rMartSuperMarket/test-output/old/Suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d076c9">  <td>24/11/13 21:36:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.invalidUsernameInvalidPassword()[pri:0, instance:testscript.LoginTest@35d019a3]">invalidUsernameInvalidPassword</td> 
-  <td>main@961409111</td>   <td></td> </tr>
-<tr bgcolor="b28192">  <td>24/11/13 21:36:31</td>   <td>1431</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testscript.LoginTest@35d019a3]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@961409111</td>   <td></td> </tr>
-<tr bgcolor="b28192">  <td>24/11/13 21:36:27</td>   <td>-2561</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testscript.LoginTest@35d019a3]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@961409111</td>   <td></td> </tr>
+<tr bgcolor="b28192">  <td>24/11/18 21:45:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testscript.AdminUserTest@1a482e36]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1867139015</td>   <td></td> </tr>
+<tr bgcolor="b28192">  <td>24/11/18 21:44:56</td>   <td>-15465</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testscript.AdminUserTest@1a482e36]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1867139015</td>   <td></td> </tr>
+<tr bgcolor="d076c9">  <td>24/11/18 21:45:00</td>   <td>-11486</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminUserTest.verifyUserisAbletocreateNewAdminUser(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:testscript.AdminUserTest@1a482e36]">verifyUserisAbletocreateNewAdminUser</td> 
+  <td>main@1867139015</td>   <td></td> </tr>
 </table>
