--- a/7rMartSuperMarket/test-output/old/parallel testing/methods-alphabetical.html
+++ b/7rMartSuperMarket/test-output/old/parallel testing/methods-alphabetical.html
@@ -1,40 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>parallel testing</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ba6dae">  <td>24/11/12 18:39:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testscript.LoginTest@50378a4]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Chrome Test-1@2068897588</td>   <td></td> </tr>
-<tr bgcolor="ba6dae">  <td>24/11/12 18:39:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testscript.LoginTest@50378a4]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Chrome Test-1@2068897588</td>   <td></td> </tr>
-<tr bgcolor="ba6dae">  <td>24/11/12 18:39:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testscript.LoginTest@50378a4]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Chrome Test-1@2068897588</td>   <td></td> </tr>
-<tr bgcolor="ba6dae">  <td>24/11/12 18:39:09</td>   <td>-12500</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testscript.HomePageTest@7bbc8656]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Chrome Test-2@431506362</td>   <td></td> </tr>
-<tr bgcolor="ba6dae">  <td>24/11/12 18:39:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testscript.LoginTest@50378a4]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Chrome Test-1@2068897588</td>   <td></td> </tr>
-<tr bgcolor="ba6dae">  <td>24/11/12 18:39:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testscript.LoginTest@50378a4]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Chrome Test-1@2068897588</td>   <td></td> </tr>
-<tr bgcolor="ba6dae">  <td>24/11/12 18:39:04</td>   <td>-17440</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testscript.HomePageTest@7bbc8656]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Chrome Test-2@431506362</td>   <td></td> </tr>
-<tr bgcolor="ba6dae">  <td>24/11/12 18:39:19</td>   <td>-3152</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testscript.LoginTest@50378a4]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Chrome Test-1@2068897588</td>   <td></td> </tr>
-<tr bgcolor="ba6dae">  <td>24/11/12 18:39:19</td>   <td>-3152</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testscript.LoginTest@50378a4]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Chrome Test-1@2068897588</td>   <td></td> </tr>
-<tr bgcolor="ba6dae">  <td>24/11/12 18:39:19</td>   <td>-3152</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testscript.LoginTest@50378a4]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Chrome Test-1@2068897588</td>   <td></td> </tr>
-<tr bgcolor="ba6dae">  <td>24/11/12 18:39:19</td>   <td>-3152</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testscript.LoginTest@50378a4]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Chrome Test-1@2068897588</td>   <td></td> </tr>
-<tr bgcolor="ba6dae">  <td>24/11/12 18:39:19</td>   <td>-3152</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testscript.LoginTest@50378a4]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Chrome Test-1@2068897588</td>   <td></td> </tr>
-<tr bgcolor="9e94ad">  <td>24/11/12 18:39:12</td>   <td>-9731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.invalidUsernameInvalidPassword()[pri:0, instance:testscript.LoginTest@50378a4]">invalidUsernameInvalidPassword</td> 
-  <td>TestNG-test=Chrome Test-1@2068897588</td>   <td></td> </tr>
-<tr bgcolor="9e94ad">  <td>24/11/12 18:39:12</td>   <td>-9731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.invalidUsernameInvalidPassword()[pri:0, instance:testscript.LoginTest@50378a4]">invalidUsernameInvalidPassword</td> 
-  <td>TestNG-test=Chrome Test-1@2068897588</td>   <td></td> </tr>
-<tr bgcolor="9e94ad">  <td>24/11/12 18:39:16</td>   <td>-5682</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.invalidUsernameValidPassword()[pri:0, instance:testscript.LoginTest@50378a4]">invalidUsernameValidPassword</td> 
-  <td>TestNG-test=Chrome Test-1@2068897588</td>   <td></td> </tr>
-<tr bgcolor="9e94ad">  <td>24/11/12 18:39:22</td>   <td>-18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyUserIsAbletoLoginValidCredentials(java.lang.String,java.lang.String)[pri:0, instance:testscript.LoginTest@50378a4]">verifyUserIsAbletoLoginValidCredentials</td> 
-  <td>TestNG-test=Chrome Test-1@2068897588</td>   <td></td> </tr>
-<tr bgcolor="9e94ad">  <td>24/11/12 18:39:22</td>   <td>-18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyUserIsAbletoLoginValidCredentials(java.lang.String,java.lang.String)[pri:0, instance:testscript.LoginTest@50378a4]">verifyUserIsAbletoLoginValidCredentials</td> 
-  <td>TestNG-test=Chrome Test-1@2068897588</td>   <td></td> </tr>
-<tr bgcolor="74a58c">  <td>24/11/12 18:39:09</td>   <td>-12613</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyUserisabletoClickLogout()[pri:0, instance:testscript.HomePageTest@7bbc8656]">verifyUserisabletoClickLogout</td> 
-  <td>TestNG-test=Chrome Test-2@431506362</td>   <td></td> </tr>
+<tr bgcolor="87aa93">  <td>24/12/04 08:14:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testscript.LoginTest@16150369]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Chrome Test-1@1796047085</td>   <td></td> </tr>
+<tr bgcolor="87aa93">  <td>24/12/04 08:14:16</td>   <td>-10871</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testscript.HomePageTest@2d0399f4]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Chrome Test-2@153646652</td>   <td></td> </tr>
+<tr bgcolor="87aa93">  <td>24/12/04 08:14:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testscript.LoginTest@16150369]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Chrome Test-1@1796047085</td>   <td></td> </tr>
+<tr bgcolor="87aa93">  <td>24/12/04 08:14:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testscript.LoginTest@16150369]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Chrome Test-1@1796047085</td>   <td></td> </tr>
+<tr bgcolor="87aa93">  <td>24/12/04 08:14:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testscript.LoginTest@16150369]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Chrome Test-1@1796047085</td>   <td></td> </tr>
+<tr bgcolor="87aa93">  <td>24/12/04 08:14:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testscript.LoginTest@16150369]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Chrome Test-1@1796047085</td>   <td></td> </tr>
+<tr bgcolor="87aa93">  <td>24/12/04 08:14:09</td>   <td>-18547</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testscript.HomePageTest@2d0399f4]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Chrome Test-2@153646652</td>   <td></td> </tr>
+<tr bgcolor="87aa93">  <td>24/12/04 08:14:24</td>   <td>-2736</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testscript.LoginTest@16150369]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Chrome Test-1@1796047085</td>   <td></td> </tr>
+<tr bgcolor="87aa93">  <td>24/12/04 08:14:24</td>   <td>-2736</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testscript.LoginTest@16150369]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Chrome Test-1@1796047085</td>   <td></td> </tr>
+<tr bgcolor="87aa93">  <td>24/12/04 08:14:24</td>   <td>-2736</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testscript.LoginTest@16150369]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Chrome Test-1@1796047085</td>   <td></td> </tr>
+<tr bgcolor="87aa93">  <td>24/12/04 08:14:24</td>   <td>-2736</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testscript.LoginTest@16150369]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Chrome Test-1@1796047085</td>   <td></td> </tr>
+<tr bgcolor="87aa93">  <td>24/12/04 08:14:24</td>   <td>-2736</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testscript.LoginTest@16150369]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Chrome Test-1@1796047085</td>   <td></td> </tr>
+<tr bgcolor="948c78">  <td>24/12/04 08:14:19</td>   <td>-8362</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.invalidUsernameInvalidPassword()[pri:0, instance:testscript.LoginTest@16150369]">invalidUsernameInvalidPassword</td> 
+  <td>TestNG-test=Chrome Test-1@1796047085</td>   <td></td> </tr>
+<tr bgcolor="948c78">  <td>24/12/04 08:14:19</td>   <td>-8362</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.invalidUsernameInvalidPassword()[pri:0, instance:testscript.LoginTest@16150369]">invalidUsernameInvalidPassword</td> 
+  <td>TestNG-test=Chrome Test-1@1796047085</td>   <td></td> </tr>
+<tr bgcolor="948c78">  <td>24/12/04 08:14:22</td>   <td>-5162</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.invalidUsernameValidPassword()[pri:0, instance:testscript.LoginTest@16150369]">invalidUsernameValidPassword</td> 
+  <td>TestNG-test=Chrome Test-1@1796047085</td>   <td></td> </tr>
+<tr bgcolor="948c78">  <td>24/12/04 08:14:27</td>   <td>-11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyUserIsAbletoLoginValidCredentials(java.lang.String,java.lang.String)[pri:0, instance:testscript.LoginTest@16150369]">verifyUserIsAbletoLoginValidCredentials</td> 
+  <td>TestNG-test=Chrome Test-1@1796047085</td>   <td></td> </tr>
+<tr bgcolor="948c78">  <td>24/12/04 08:14:27</td>   <td>-11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyUserIsAbletoLoginValidCredentials(java.lang.String,java.lang.String)[pri:0, instance:testscript.LoginTest@16150369]">verifyUserIsAbletoLoginValidCredentials</td> 
+  <td>TestNG-test=Chrome Test-1@1796047085</td>   <td></td> </tr>
+<tr bgcolor="ba6dae">  <td>24/12/04 08:14:16</td>   <td>-11148</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyUserisabletoClickLogout()[pri:0, instance:testscript.HomePageTest@2d0399f4]">verifyUserisabletoClickLogout</td> 
+  <td>TestNG-test=Chrome Test-2@153646652</td>   <td></td> </tr>
 </table>
